--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,17 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.3",
+    "babel-runtime": "^6.26.0",
     "framer-motion": "^8.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.0",
+    "react-lottie": "^1.2.3",
+    "react-notification-badge": "^1.5.1",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-scrollable-feed": "^1.3.1",
+    "socket.io-client": "^4.5.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
