showing last sent msg in decrypted form

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.3",
     "babel-runtime": "^6.26.0",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.1.1",
+    "elliptic": "^6.5.4",
     "framer-motion": "^8.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
