--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 5000
 MONGO_URI = mongodb+srv://karan:karan187@cluster0.tmyvlip.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=chatApp
+SECRET_KEY=hemang-parekh-karan-tanakhia-cp-
