--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "agora-rtc-sdk": "^3.6.11",
+    "agora-rtc-sdk-ng": "^4.16.1",
     "axios": "^1.2.3",
     "babel-runtime": "^6.26.0",
     "crypto": "^1.0.1",
@@ -21,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
+    "react-icons": "^4.7.1",
     "react-lottie": "^1.2.3",
     "react-notification-badge": "^1.5.1",
     "react-router-dom": "^5.3.4",
