--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-scrollable-feed": "^1.3.1",
+    "react-speech-recognition": "^3.10.0",
     "socket.io-client": "^4.5.4",
     "web-vitals": "^2.1.4"
   },
