--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
     "elliptic": "^6.5.4",
+    "emoji-picker-react": "^4.4.7",
     "framer-motion": "^8.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
