--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 5000
-MONGO_URI = mongodb+srv://karan:karan187@cluster0.tmyvlip.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI =mongodb+srv://rahulpatel:rahulpatel@cluster0.y2esnvy.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=chatApp
 SECRET_KEY=hemang-parekh-karan-tanakhia-cp-
 APP_ID = 3fe5c987fb424efb8970f6e6c20fa471
