--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "crypto-js": "^4.1.1",
     "elliptic": "^6.5.4",
     "emoji-picker-react": "^4.4.7",
+    "file-saver": "^2.0.5",
     "framer-motion": "^8.5.0",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.0",
@@ -34,7 +36,8 @@
     "react-scrollable-feed": "^1.3.1",
     "react-speech-recognition": "^3.10.0",
     "socket.io-client": "^4.5.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
