--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.4",
     "multer": "^1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.4"
